@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+        Added support for build args (Sean Maguire)
+
 0.04      2013-05-07 15:07:22 America/Los_Angeles
 
         Remove accidental MyApp::Plugin dep (RT#85111)
